[metadata]
name = d2geo
version = 1.0.0
description = Framework for computing seismic attributes with Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Braden Fitz-Gerald
author_email = braden.fitzgerald@gmail.com
license = GPLv3
url = https://github.com/dudley-fitzgerald/d2geo

[options]
packages = attributes
python_requires = >=3.8
install_requires =
    dask
    segyio
    psutil
